--- a/frontend/about.html
+++ b/frontend/about.html
@@ -45,7 +45,7 @@
       </div>
       <div class="col-lg-6">
         <div class="ratio ratio-16x9 rounded-4 overflow-hidden shadow-lg">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/pzG7Wc6mbwE?si=SjVaIUfHNkSO2Hlc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/pzG7Wc6mbwE?si=SjVaIUfHNkSO2Hlc" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
       </div>
     </div>
